moved from slim to haml. Slim sucks at indentation.

--- a/index.html
+++ b/index.html
@@ -1,190 +1,192 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class='no-js' lang='en'>
   <head>
-    <meta charset="utf-8" />
+    <meta charset='utf-8' />
     <title>Project Title</title>
-    <meta name="description" />
-    <meta name="author" />
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-    </script>
-    <meta content="width=(device-width; initial-scale=1.0;)maximum-scale=1.0;" name="viewport" />
-    <link href="public/stylesheets/css/style.css" rel="stylesheet" type="text/css" />
+    <meta content='' name='description' />
+    <meta content='' name='author' />
+    <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
+    <meta content='width=(device-width; initial-scale=1.0;)maximum-scale=1.0;' name='viewport' />
+    <link href='public/stylesheets/css/style.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
-    <div class="container">
-      <h1 class="center">Gravity CSS</h1>
+    <div class='container'>
+      <h1 class='center'>Gravity CSS</h1>
       <hr />
       <section>
-        <h3>Paragraphs</h3>
-        <div class="span-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>Paragraphs</h3>
+        <div class='span-4'>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <p>
-            <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong>
+            <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong>
           </p>
-          <pre><code>This is a code block</code></pre>
+          <pre><code>This is a code block</code></pre>
         </div>
-        <div class="span-4">
+        <div class='span-4'>
+          <p></p>
+          <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</b>
+          <p></p>
+          <a>This is a line</a>
           <p>
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</b>
-          </p>
-          <p>
-            <a>This is a link</a>
-          </p>
-          <p>
-            <i>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</i>
+            <i>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</i>
           </p>
         </div>
-        <div class="span-4">
+        <div class='span-4'>
           <p>
-            <small>Small text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </small>
+            <small>Small text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</small>
           </p>
-          <q>Quote. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
+          <q>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
         </div>
       </section>
       <hr />
       <section>
-        <div class="span-4">
-          <h1>Misc Elements</h1>
-          <p>
-            <del>Strike through</del>
-          </p>
+        <div class='span-4'>
+          <h1>Misc Elements</h1>
+          <p></p>
+          <del>Strike through</del>
         </div>
-        <div class="span-8">
-          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  styles. </blockquote>
-        </div>
-      </section>
-      <hr />
-      <section>
-        <h3>Headings</h3>
-        <div class="span-4">
-          <h1>Heading 1</h1>
-          <h2>Heading 2</h2>
-          <h3>Heading 3</h3>
-          <h4>Heading 4</h4>
-          <h5>Heading 5</h5>
-          <h6>Heading 6</h6>
-        </div>
-        <div class="span-4">
-          <h1>Lorem ipsum dolor sit amet</h1>
-          <h2>Lorem ipsum dolor sit amet</h2>
-          <h3>Lorem ipsum dolor sit amet</h3>
-          <h4>Lorem ipsum dolor sit amet</h4>
-          <h5>Lorem ipsum dolor sit amet</h5>
-          <h6>Lorem ipsum dolor sit amet</h6>
-        </div>
-        <div class="span-4">
-          <h1>Heading 1</h1>
-          <hr />
-          <h2>Heading 2</h2>
-          <hr />
-          <h3>Heading 3</h3>
-          <hr />
-          <h4>Heading 4</h4>
-          <hr />
-          <h5>Heading 5</h5>
-          <hr />
-          <h6>Heading 6</h6>
-          <hr />
+        <div class='span-8'>
+          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  styles.</blockquote>
         </div>
       </section>
       <hr />
       <section>
-        <div class="span-4">
-          <h3>Forms</h3>
-          <p>Default forms. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <ul class="input-list">
+        <h3>Headings</h3>
+        <div class='span-4'>
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          <h5>Heading 5</h5>
+          <h6>Heading 6</h6>
+        </div>
+        <div class='span-4'>
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <h2>Lorem ipsum dolor sit amet</h2>
+          <h3>Lorem ipsum dolor sit amet</h3>
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <h5>Lorem ipsum dolor sit amet</h5>
+          <h6>Lorem ipsum dolor sit amet</h6>
+        </div>
+        <div class='span-4'>
+          <h1>Heading 1</h1>
+          <hr />
+          <h2>Heading 2</h2>
+          <hr />
+          <h3>Heading 3</h3>
+          <hr />
+          <h4>Heading 4</h4>
+          <hr />
+          <h5>Heading 5</h5>
+          <hr />
+          <h6>Heading 6</h6>
+          <hr />
+        </div>
+      </section>
+      <hr />
+      <section>
+        <div class='span-4'>
+          <h3>Forms</h3>
+          <p>Default forms. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <ul class='input-list'>
             <li>
-              <input type="radio">Radio button 1</input>
+              <input type='radio'>Radio button 1</input>
             </li>
             <li>
-              <input type="radio">Another</input>
+              <input type='radio'>Another</input>
             </li>
             <li>
-              <input type="radio">Radio 3</input>
+              <input type='radio'>Radio 3</input>
             </li>
           </ul>
-          <label>Password input</label>
-          <input type="password" value="password" />
-          <input type="search" />
+          <label>Password input</label>
+          <input type='password' value='password' />
+          <input type='search' />
         </div>
-        <div class="span-8">
+        <div class='span-8'>
           <form>
-            <label>Text input</label>
-            <input type="text" />
-            <label>Email input</label>
-            <input type="email" />
-            <label>Select</label><select><option>First</option><option>Second</option><option>Third</option></select>
-            <h3>Stacked Checkboxes</h3>
-            <ul class="input-list">
-              <li>
-                <input type="checkbox">Checkbox</input>
-              </li>
-              <li>
-                <input type="checkbox">List item</input>
-              </li>
-              <li>
-                <input type="checkbox">Another item</input>
-              </li>
-            </ul>
-            <label>Textarea</label><textarea></textarea>
+            <label>Text input</label>
+            <input type='text' />
+            <label>Email input</label>
+            <input type='email' />
+            <label>Select</label>
+            <select>
+              <option>First</option>
+              <option>Second</option>
+              <option>Third</option>
+            </select>
           </form>
+          <h3>Stacked Checkboxes</h3>
+          <ul class='input-list'>
+            <li>
+              <input type='checkbox'>Checkbox</input>
+            </li>
+            <li>
+              <input type='checkbox'>List item</input>
+            </li>
+            <li>
+              <input type='checkbox'>Another item</input>
+            </li>
+          </ul>
+          <label>Textarea</label>
+          <textarea></textarea>
         </div>
       </section>
       <hr />
       <section>
-        <h3>Lists</h3>
-        <div class="span-3">
+        <h3>Lists</h3>
+        <div class='span-3'>
           <ul>
-            <li>Some long text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-            <li>Unordered list test</li>
+            <li>Some long text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+            <li>Unordered list test</li>
             <li>
-              <Some>item</Some>
+              Some item
               <ul>
-                <li>Unordered list test</li>
-                <li>Another item</li>
-                <li>Sub item</li>
+                <li>Unordered list test</li>
+                <li>Another item</li>
+                <li>Sub item</li>
+                <li>Final list item</li>
               </ul>
             </li>
-            <li>Final list item</li>
           </ul>
         </div>
-        <div class="span-3">
+        <div class='span-3'>
           <ol>
-            <li>Item 1</li>
+            <li>Item 1</li>
             <li>
-              <Nested>ol</Nested>
+              Nested ol
               <ol>
-                <li>Nested item</li>
-                <li>Another one</li>
+                <li>Nested item</li>
+                <li>Another one</li>
+                <li>Item 2</li>
+                <li>
+                  Item 3
+                  <ul>
+                    <li>Sub item</li>
+                  </ul>
+                </li>
               </ol>
-            </li>
-            <li>Item 2</li>
-            <li>
-              <Item>3</Item>
-              <ul>
-                <li>Sub item</li>
-              </ul>
             </li>
           </ol>
         </div>
-        <div class="span-3">
+        <div class='span-3'>
           <dl>
-            <dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dt>
-            <dd>Item 1</dd>
+            <dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dt>
+            <dd>Item 1</dd>
+            <dl>Some title</dl>
+            <dd>Item 2</dd>
+            <dd>Item 3</dd>
           </dl>
-          <dl>Some title
-             Item 2
-             Item 3</dl>
         </div>
-        <div class="span-3">
-          <ul class="unstyled">
-            <li>Unstyled items</li>
-            <li>Another unstyled list item</li>
+        <div class='span-3'>
+          <ul class='unstyled'>
+            <li>Unstyled items</li>
+            <li>Another unstyled list item</li>
             <li>
-              <Some>text</Some>
+              Some text
               <ul>
-                <li>Sub item in list</li>
-                <li>Another sub item</li>
+                <li>Sub item in list</li>
+                <li>Another sub item</li>
               </ul>
             </li>
           </ul>
@@ -192,42 +194,44 @@
       </section>
       <hr />
       <section>
-        <h3>Tabular Data</h3>
-        <div class="span-12">
+        <h3>Tabular Data</h3>
+        <div class='span-12'>
           <table>
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Address</th>
-                <th>Email</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Email</th>
               </tr>
               <tr>
-                <td>Owain</td>
-                <td>Somewhere Park</td>
-                <td>owain@owainlewis.com</td>
+                <td>Owain</td>
+                <td>My Town</td>
+                <td>owain@owainlewis.com</td>
               </tr>
               <tr>
-                <td>Lorem</td>
-                <td>Ipsume</td>
-                <td>Dolor</td>
+                <td>Lorem</td>
+                <td>Ipsume</td>
+                <td>Dolor</td>
               </tr>
               <tr>
-                <td>Owain</td>
-                <td>Somewhere Park</td>
-                <td>owain@owainlewis.com</td>
+                <td>Owain</td>
+                <td>Somewhere Park</td>
+                <td>owain@owainlewis.com</td>
               </tr>
               <tr>
-                <td>Lorem</td>
-                <td>Ipsume</td>
-                <td>Dolor</td>
+                <td>Lorem</td>
+                <td>Ipsume</td>
+                <td>Dolor</td>
               </tr>
             </thead>
           </table>
         </div>
       </section>
       <section>
-        <h3>Buttons</h3>
-        <a class="button">Submit</a><a class="button delete">Delete</a><a class="button main">Default button</a>
+        <h3>Buttons</h3>
+        <a class='button'>Submit</a>
+        <a class='button delete'>Delete</a>
+        <a class='button main'>Default button</a>
       </section>
     </div>
   </body>
