updated gradient mixins

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               <option>Second</option>
               <option>Third</option>
             </select>
+            <input type='submit' />
           </form>
           <h3>Stacked Checkboxes</h3>
           <ul class='input-list'>
