--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <option>Second</option>
               <option>Third</option>
             </select>
-            <input type='submit' />
+            <input class='button' type='submit' />
           </form>
           <h3>Stacked Checkboxes</h3>
           <ul class='input-list'>
